# rpicontrol

./: Cargo.toml
src/: fan.rs  lcd.rs  main.rs  sys.rs
