[package]
name = "rpicontrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.13.1", features = ["hal"] }
substring = "1.4.5"
chrono = "0.4.22"
log = "0.4.17"
daemonize = "0.4.1"
simple_logger = "2.3.0"